--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- TODO: Change font to local file -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans">
