Manifest Origin use Credentials

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=yes"
     />
     <meta name="theme-color" content="#000000" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" crossorigin="use-credentials"/>
     <style>
       .link {
         text-decoration: none;
