--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,11 @@
 
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- TODO: Change font to local file -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Bootstrap core CSS -->
+    <link href="./dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="cover.css" rel="stylesheet">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=yes"
@@ -19,12 +22,12 @@
         color: inherit;
       }
     </style>
-    <title>Welcome to our Blog!</title>
+    <title>Motekso - Modern Tech Solutions</title>
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <div id="root" class="text-center"></div>
   </body>
 </html>
